# Spec

./: .claudeignore  .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  DELIVERABLES.md  LICENSE  README.md  REVIEW_FLOW_EXAMPLES.md  REVIEW_FLOW_FIXES_SUMMARY.md  pyproject.toml  review_flow_fixes.patch  spec.sh
.augment/agents/: ingot-implementer.md  ingot-planner.md  ingot-researcher.md  ingot-reviewer.md  ingot-tasklist-refiner.md  ingot-tasklist.md  spec-doc-updater.md  spec-implementer.md  spec-implementer.md.new  spec-planner.md  spec-planner.md.new  spec-reviewer.md  spec-reviewer.md.new  spec-tasklist-fixer.md  spec-tasklist-refiner.md  spec-tasklist.md  spec-tasklist.md.new
.github/workflows/: ci.yml
.ingot/agents/: ingot-implementer.md  ingot-planner.md  ingot-researcher.md  ingot-reviewer.md  ingot-tasklist-refiner.md  ingot-tasklist.md
ai_workflow/: cli.py
ai_workflow/config/: manager.py
ai_workflow/workflow/: step2_tasklist.py  step3_execute.py  tasks.py
docs/: platform-configuration.md
ingot/: __init__.py  __main__.py  cli.py
ingot/cli/: app.py  menu.py  workflow.py
ingot/config/: __init__.py  backend_resolver.py  compatibility.py  fetch_config.py  manager.py  settings.py
ingot/discovery/: __init__.py  citation_utils.py  citation_verifier.py  context_builder.py  file_index.py  grep_engine.py  manifest_parser.py  test_mapper.py
ingot/integrations/: __init__.py  agents.py  aider.py  auggie.py  auth.py  cache.py  claude.py  codex.py  cursor.py  gemini.py  git.py  jira.py  ticket_service.py
ingot/onboarding/: __init__.py  flow.py
ingot/ui/: __init__.py  ingot.tcss  inline_runner.py  keyboard.py  log_buffer.py  menus.py  messages.py  plan_tui.py  prompts.py  textual_app.py  textual_runner.py  tui.py
ingot/utils/: __init__.py  console.py  env_utils.py  error_analysis.py  errors.py  logging.py  retry.py
ingot/validation/: __init__.py  base.py  plan_fixer.py  plan_validators.py
ingot/workflow/: __init__.py  autofix.py  conflict_detection.py  constants.py  events.py  git_utils.py  log_management.py  parallel_executor.py  prompts.py  review.py  runner.py  state.py  step1_5_clarification.py  step1_plan.py  step2_tasklist.py  step3_execute.py  step4_update_docs.py  step5_commit.py  task_memory.py  tasks.py
scripts/: check-legacy-naming.sh
spec/: __init__.py  __main__.py  cli.py
spec/config/: __init__.py  backend_resolver.py  compatibility.py  fetch_config.py  manager.py  settings.py
spec/integrations/: __init__.py  agents.py  auggie.py  auth.py  cache.py  claude.py  cursor.py  git.py  jira.py  ticket_service.py
spec/onboarding/: __init__.py  flow.py
spec/ui/: __init__.py  keyboard.py  log_buffer.py  menus.py  plan_tui.py  prompts.py  tui.py
spec/utils/: __init__.py  console.py  error_analysis.py  errors.py  logging.py  retry.py
spec/workflow/: __init__.py  autofix.py  conflict_detection.py  constants.py  events.py  git_utils.py  log_management.py  prompts.py  review.py  runner.py  state.py  step1_plan.py  step2_tasklist.py  step3_execute.py  step4_update_docs.py  task_memory.py  tasks.py
specflow/: cli.py
specflow/config/: manager.py  settings.py
specflow/integrations/: __init__.py  agents.py  auggie.py  git.py
specflow/ui/: __init__.py  keyboard.py  menus.py  plan_tui.py  prompts.py  tui.py
specflow/utils/: __init__.py  error_analysis.py  retry.py
specflow/workflow/: git_utils.py  log_management.py  runner.py  state.py  step1_plan.py  step2_tasklist.py  step3_execute.py  tasks.py  (+2 more)
specs/: 00_Architecture_Refactor_Spec.md  01_Integration_GitHub_Spec.md  02_Integration_Linear_Spec.md  03_Integration_AzureDevOps_Spec.md  04_Integration_Monday_Spec.md  05_Integration_Trello_Spec.md  AMI-103-implementation-plan.md  AMI-17-implementation-plan.md  AMI-18-implementation-plan.md  AMI-19-implementation-plan.md  AMI-20-implementation-plan.md  AMI-21-implementation-plan.md  AMI-22-implementation-plan.md  AMI-23-implementation-plan.md  AMI-24-implementation-plan.md  AMI-25-implementation-plan.md  AMI-29-implementation-plan.md  AMI-30-implementation-plan.md  AMI-31-implementation-plan.md  AMI-32-implementation-plan.md  AMI-33-implementation-plan.md  AMI-38-implementation-plan.md  AMI-39-implementation-plan.md  AMI-40-implementation-plan.md  AMI-41-implementation-plan.md  AMI-42-implementation-plan.md  AMI-43-implementation-plan.md  AMI-44-implementation-plan.md  AMI-46-implementation-plan.md  AMI-47-implementation-plan.md  AMI-48-implementation-plan.md  AMI-49-implementation-plan.md  AMI-50-implementation-plan.md  AMI-51-implementation-plan.md  AMI-52-implementation-plan.md  AMI-53-implementation-plan.md  AMI-54-implementation-plan.md  AMI-56-implementation-plan.md  DYNAMIC-DOCS-SPEC.md  PARALLEL-EXECUTION-REMEDIATION-SPEC.md  (+11 more)
tests/: conftest.py  test_agents.py  test_agents_gitignore.py  test_aider_backend.py  test_aider_client.py  test_auggie.py  test_auggie_backend.py  test_auggie_fetcher.py  test_auth_manager.py  test_autofix.py  test_azure_devops_provider.py  test_backend_errors.py  test_backend_factory.py  test_backend_integration.py  test_backend_models.py  test_backend_protocol.py  test_backend_resolver.py  test_backends.py  test_base_backend.py  test_baseline_auggie_behavior.py  test_cache.py  test_citation_utils.py  test_citation_verifier.py  test_claude_backend.py  test_claude_client.py  test_claude_fetcher.py  test_cli.py  test_cli_integration.py  test_codex_backend.py  test_codex_client.py  test_compatibility.py  test_config_manager.py  test_console.py  test_context_builder.py  test_create_ticket_service_from_config.py  test_cursor_backend.py  test_cursor_client.py  test_cursor_fetcher.py  test_direct_api_fetcher.py  test_direct_api_handlers.py  (+68 more)
(+105 files in other folders)
