[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingot"
version = "0.0.0-dev"
description = "INGOT - Spec-driven development workflow using AI backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Development Team" }
]
keywords = ["ingot", "workflow", "ai", "cli", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "packaging>=23.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-xdist>=3.5.0",      # Parallel test execution
    "pytest-timeout>=2.2.0",    # Timeout for hanging tests
    "pytest-asyncio>=1.0.0",    # Async test support
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",      # Type stubs for PyYAML
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",        # Git hook management
    "ipython>=8.0.0",           # Enhanced REPL for debugging
]

[project.scripts]
ingot = "ingot.cli:app"

[project.urls]
Homepage = "https://github.com/Amiad5298/Spec"
Documentation = "https://github.com/Amiad5298/Spec#readme"
Repository = "https://github.com/Amiad5298/Spec"

[tool.hatch.build.targets.wheel]
packages = ["ingot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=ingot",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",          # For coverage-gutters extension
    "--cov-fail-under=80",
    "--timeout=60",              # Default 60s timeout per test
]
# pytest-xdist: use 'pytest -n auto' for parallel execution
# Not in addopts to allow sequential debugging when needed
timeout_method = "thread"        # Works better with Rich console
asyncio_mode = "auto"            # pytest-asyncio: auto-detect async tests
asyncio_default_fixture_loop_scope = "function"  # Each test gets its own event loop

[tool.coverage.run]
source = ["ingot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ingot"]
